changed html, add kg translations

--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -1,13 +1,70 @@
 {
-    "Company name": "«ТУЛПАР» АВТОМОМАНДАРЫ",
+    "Company name": "АВТО КҮРӨӨКАНА“ТУЛПАР”",
     "Calculator": "Калькулятор",
-    "About company": "Компания жөнүндө",
+    "About company": "Биз жөнүндө",
     "Examples": "Мисалдар",
-    "Loan terms": "Кредиттин шарттары",
-    "Contacts": "Байланыш",
-    "Call me back": "Мага кайра чал",
-    "Loans without repossession of a Car in Bishkek": "Бишкекте унааны кайтарып алуусуз насыялар",
-    "Promotional loan without car repossession <b>at 11.9%</b> of 50 thousand soms for a period of 30 days": "Автоунааны кайтарып алуусуз 50 миң сомдон <b>11,9%</b> 30 күндүк мөөнөткө акциялык насыя",
+    "Loan terms": "Шарттар",
+    "Contacts": "Байланыштар",
+    "Call me back": "Кайра чалуу",
+    "Loans without repossession of a Car in Bishkek": "Бишкек шаарында Унааны алуусуз кредиттер",
+    "Promotional loan without car repossession <b>at 11.9%</b> of 50 thousand soms for a period of 30 days": "11.9% менен унааны алуусуз насыялоо 50 миң сом кредит",
     "Get money": "Акча алуу",
-    "Submit your application": "Арыз калтырыңыз"
+    "Submit your application": "Өтүнмөңүздү жөнөтүңүз",
+    "Auto pawnshop calculator": "Төлөм калькулятору",
+    "Select amount": "Сумманы тандаңыз",
+    "Loan amount": "Насыянын суммасы",
+    "Amount % per month": "Айына % суммасы",
+    "Your bid": "Сиздин сунушуңуз",
+    "With withdrawal": "Унааны алуу менен",
+    "Without withdrawal": "Унааны алуусуз менен",
+    "How will they contact you?": "Сизге кантип кайрылса болот?",
+    "Enter your contact number": "Телефон номуруңузду киргизиңиз",
+    "I agree to the processing of personal data": "Мен жеке маалыматтарды иштетүүгө макулмун.",
+    "Submit your application now and get paid today!": "Өтүнмөңүздү жөнөтүп,бүгүн акча алыңыз!",
+    "Call me back": "Мага кайра чалыңыз",
+    "Tulpar pawnshop": "Автокүрөөкана “Тулпар”",
+    "Loan from 50 thousand": "50 миң сомдон өйдө кредит",
+    "How can I get money in 40 minutes today?": "Бүгүн 40 мүнөттө кантип акча алууга болот?",
+    "What are the main terms of the contract?": "Келишимдин негизги шарттары кандай?",
+    "Only 2 documents are needed. Which ones?": "Болгону 2 документ керек. Алар кайсылар?",
+    "Your path to success": "Сиздин ийгиликке жолуңуз",
+    "First": "Алгачкы",
+    "Online APPLICATION. A manager will contact you to clarify the details of the loan.": "Онлайн өтүнмө. Менеджер насыянын шарттарын тактоо үчүн сиз менен байланышат.",
+    "Second": "Экинчи",
+    "Just two documents and we sign the loan agreement.": "Болгону эки документ жана биз кредиттик келишимге кол коёбуз.",
+    "Third": "Үчүнчү",
+    "Finance. You receive cash on the day of application in a few minutes.": "Каржы. Сиз кайрылуу күнү накталай акчаны бир нече мүнөттөн кийин аласыз.",
+    "Loan without repossessing a car - everything is quick and simple": "Унааны алуусуз насыя - баары тез жана оңой",
+    "sub-text-1": "Бишкек автоломбард унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
+    "Features of loans for cars without withdrawal": "Автокредиттерди алуунун өзгөчөлүктөрү",
+    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн эки түп нуска документ керек болот:<br>Идентификациялык карта (ID)<br>Унаанын каттоо күбөлүгү<br>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 450 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>450 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
+    "Advantages of loans secured by a Vehicle Certificate": "ТК каттоо жөнүндө күбөлүктөр менен камсыздалган кредиттердин артыкчылыктары",
+    "sub-text-3": "Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.<br>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.<br>Таза жана түшүнүктүү келишим шарттары.",
+    "Examples of issued loans": "Берилген кредиттердин мисалдары",
+    "Toyota Camry 2000": "Toyota Camry 70",
+    "Given: 500 thousand soms without withdrawal": "Берилген: 500миң сом унааны алуусуз",
+    "Loan cost per month: 50,645 som": "Айына кредиттин баасы: 50,645 сом",
+    "Money for a car in Bishkek": "Бишкекте автомашинаны күрөөгө коюп насыя алуу",
+    "Get money": "Акча алуу",
+    "Loan terms:": "Карыз алуучуларга талаптар:",
+    "sub-text-4": "Кредит боюнча максималдуу пайыздык чен жылдык 142.8%, анын ичинде кредиттик пайыздар.<br>Кредит боюнча минималдуу пайыздык чен да кредиттин пайызын кошкондо жылдык 72% түзөт.<br>Комиссиялар жок, анын ичинде кредитти берүү жана тейлөө жана башка чыгымдар.<br>Насыяны төлөөнүн минималдуу мөөнөтү 30 күн, насыяны төлөөнүн максималдуу мөөнөтү 365 күн (1 жыл).<br>Насыянын мөөнөтү 30 күндөн 12 айга чейин.<br>Төлөбөй коюунун кесепеттери: төлөө мөөнөтү аяктагандан кийин 60 күн өткөндөн кийин күрөөгө коюлган мүлк аукциондо сатылат, кредиттин суммасынан жана чегерилген пайыздан ашкан сумма (жылына 142,8% ставка боюнча) Зайымчыга кайтарылып берилет.",
+    "An example of calculating a loan in our car pawnshop:": "Күрөө менен камсыздалган насыяны эсептөөнүн мисалы:",
+    "sub-text-5": "Биз сизге насыяны эсептөөнүн мисалын сунуштайбыз.<br>1 жылга 100 миң сом керек болчу. 12 айдан кийин 242 800 сомду (анын ичинен 100 миң сому негизги сумма, 142.8 миң сому пайыз) кайтарып беришиңиз керек болот. Эч кандай комиссиялар жок. Насыяны төлөө берилген күндөн тартып 90 күндөн кийин мүмкүн.<br>Насыянын мөөнөтү 30 күндөн 365 күнгө чейин.<br>Насыянын мөөнөтүн узартуу өткөн мезгилге автоунаа күрөөсү менен «Карызга Акча» кызматын пайдалангандыгы үчүн % толук төлөм менен ишке ашырылат.",
+    "Contacts": "Байланыштар",
+    "Address": "Дарегибиз",
+    "Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)": "Бишкек шаары, Московская 262көч. Асаналиева кесилиши (Некрасова)",
+    "Phone": "Телефон",
+    "Operating mode": "Иштөө убактысы",
+    "Sun: Closed": "Вс: Дем алыш",
+    "Sat: 10:00 - 15:00": "Сб: 10:00 - 15:00",
+    "date-1": "Пн-Пт: 10:00 - 19:00",
+    "AUTO PAWNSHOP 'TULPAR'": "АВТО ЛОМБАРД “ТУЛПАР”",
+    "Services provided by:": "Услуги оказывает:",
+    "OSDO 'Avtolombard Tulpar'": "ОсДО “Автоломбард Тулпар”",
+    "TIN: 02205202310576": "ИНН: 02205202310576",
+    "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
+    "License number": "Номер Лицензии",
+    "Close": "Жабуу",
+
+    "modal-title": "Унааны алуусуз насыя алуу"
 }
