--- a/simple_i18n/translations/ru.json
+++ b/simple_i18n/translations/ru.json
@@ -41,9 +41,10 @@
     "Advantages of loans secured by a Vehicle Certificate": "Примущества займов под залог Свидетелства ТС",
     "sub-text-3": "<ul><li>Мы не изымаем и не делаем записи в Свидельство о регистрации автомобиля, не переоформляем собственника, все документы остаются у владельца автомобиля.</li><li>Выдаем займы под залог всех видов транспортных средств, нам не важна марка, год выпуска, также мы не спрашиваем поручителей и справок о доходах.</li><li>Чистые и прозрачные условия договора.</li><ul>",
     "Examples of issued loans": "Примеры выданных займов",
-    "Toyota Camry 2000": "Toyota Camry 2000",
     "Given: 500 thousand soms without withdrawal": "Выдали: 500тыс сом без изъятия",
-    "Loan cost per month: 50,645 som": "Стоимость займа в месяц: 50,645 сом",
+    "Loan cost per month: 46,625 som": "Стоимость займа в месяц: 46,625 сом",
+    "Given: 470 thousand soms without withdrawal": "Выдали: 470тыс сом без изъятия",
+    "Loan cost per month: 43,827 som": "Стоимость займа в месяц: 43,827 сом",
     "Money for a car in Bishkek": "Деньги под автомобиль в Бишкеке",
     "Get money": "Получить деньги",
     "Loan terms:": "Условия займа:",
@@ -63,5 +64,8 @@
     "OSDO 'Avtolombard Tulpar'": "ОсДО “Автоломбард Тулпар”",
     "TIN: 02205202310576": "ИНН: 02205202310576",
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
-    "License number": "Номер Лицензии"
+    "License number": "Номер Лицензии",
+    "Close": "Закрыть",
+
+    "modal-title": "Получить займ без изъятия авто"
 }
