--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -65,6 +65,20 @@
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
     "License number": "Номер Лицензии",
     "Close": "Жабуу",
-
+    "Toyota Camry 70 2019": "Toyota Camry 70 </br>2019 жылы",
+    "Toyota Camry 70 2019.issued": "Берилген: 300миң сом (Унааны алуусуз менен)",
+    "Toyota Camry 70 2019.price": "Айына кредиттин баасы: 27 975сом",
+    "Lexus GX 470 2005": "Lexus GX 470 </br>2005 жылы",
+    "Lexus GX 470 2005.issued": "Берилген: 500миң сом (Унааны алуу менен)",
+    "Lexus GX 470 2005.price": "Айына кредиттин баасы: 44 166сом",
+    "Hyundai Sonata 2015": "Hyundai Sonata </br>2015 жылы",
+    "Hyundai Sonata 2015.issued": "Берилген: 210миң сом (Унааны алуу менен)",
+    "Hyundai Sonata 2015.price": "Айына кредиттин баасы: 18 550сом",
+    "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class </br>2010 жылы",
+    "Mercedes-Benz E-Class 2010.issued": "Берилген: 450миң сом (Унааны алуусуз менен)",
+    "Mercedes-Benz E-Class 2010.price": "Айына кредиттин баасы: 41 962сом",
+    "Honda CR-V 2010": "Honda CR-V </br>2010 жылы",
+    "Honda CR-V 2010.issued": "Берилген: 150миң сом (Унааны алуусуз менен)",
+    "Honda CR-V 2010.price": "Айына кредиттин баасы: 13 987сом",
     "modal-title": "Унааны алуусуз насыя алуу"
 }
