--- a/simple_i18n/translations/ru.json
+++ b/simple_i18n/translations/ru.json
@@ -66,20 +66,21 @@
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
     "License number": "Номер Лицензии",
     "Close": "Закрыть",
-    "Toyota Camry 70 2019": "Toyota Camry 70 </br>2019 года",
+    "Toyota Camry 70 2019": "Toyota Camry 70",
     "Toyota Camry 70 2019.issued": "Выдали: 300тыс сом (Без изъятия)",
     "Toyota Camry 70 2019.price": "Стоимость займа в месяц: 27 975сом",
-    "Lexus GX 470 2005": "Lexus GX 470 </br>2005 года",
+    "Lexus GX 470 2005": "Lexus GX 470",
     "Lexus GX 470 2005.issued": "Выдали: 500тыс сом (С изъятием)",
     "Lexus GX 470 2005.price": "Стоимость займа в месяц: 44 166сом",
-    "Hyundai Sonata 2015": "Hyundai Sonata </br>2015 года",
+    "Hyundai Sonata 2015": "Hyundai Sonata",
     "Hyundai Sonata 2015.issued": "Выдали: 210тыс сом (С изъятием)",
     "Hyundai Sonata 2015.price": "Стоимость займа в месяц: 18 550сом",
-    "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class </br>2010 года",
+    "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class",
     "Mercedes-Benz E-Class 2010.issued": "Выдали: 450тыс сом (Без изъятия)",
     "Mercedes-Benz E-Class 2010.price": "Стоимость займа в месяц: 41 962сом",
-    "Honda CR-V 2010": "Honda CR-V </br>2010 года",
+    "Honda CR-V 2010": "Honda CR-V",
     "Honda CR-V 2010.issued": "Выдали: 150тыс сом (Без изъятия)",
     "Honda CR-V 2010.price": "Стоимость займа в месяц: 13 987сом",
+    "yearly": "года",
     "modal-title": "Получить займ без изъятия авто"
 }
