add code which send message, added forms for validation

--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -7,7 +7,7 @@
     "Contacts": "Байланыштар",
     "Call me back": "Кайра чалуу",
     "Loans without repossession of a Car in Bishkek": "Бишкек шаарында Унааны алуусуз кредиттер",
-    "Promotional loan without car repossession <b>at 11.9%</b> of 50 thousand soms for a period of 30 days": "11.9% менен унааны алуусуз насыялоо 50 миң сом кредит",
+    "Promotional loan without car repossession <b>at 12.5%</b> of 50 thousand soms for a period of 30 days": "<b>12.5%</b> менен унааны алуусуз насыялоо 50 миң сом кредит",
     "Get money": "Акча алуу",
     "Submit your application": "Өтүнмөңүздү жөнөтүңүз",
     "Auto pawnshop calculator": "Төлөм калькулятору",
@@ -67,18 +67,18 @@
     "Close": "Жабуу",
     "Toyota Camry 70 2019": "Toyota Camry 70 </br>2019 жылы",
     "Toyota Camry 70 2019.issued": "Берилген: 300миң сом (Унааны алуусуз менен)",
-    "Toyota Camry 70 2019.price": "Айына кредиттин баасы: 27 975сом",
+    "Toyota Camry 70 2019.price": "Айына кредиттин баасы: 28 125сом",
     "Lexus GX 470 2005": "Lexus GX 470 </br>2005 жылы",
     "Lexus GX 470 2005.issued": "Берилген: 500миң сом (Унааны алуу менен)",
-    "Lexus GX 470 2005.price": "Айына кредиттин баасы: 44 166сом",
+    "Lexus GX 470 2005.price": "Айына кредиттин баасы: 43 750сом",
     "Hyundai Sonata 2015": "Hyundai Sonata </br>2015 жылы",
     "Hyundai Sonata 2015.issued": "Берилген: 210миң сом (Унааны алуу менен)",
-    "Hyundai Sonata 2015.price": "Айына кредиттин баасы: 18 550сом",
+    "Hyundai Sonata 2015.price": "Айына кредиттин баасы: 18 375сом",
     "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class </br>2010 жылы",
     "Mercedes-Benz E-Class 2010.issued": "Берилген: 450миң сом (Унааны алуусуз менен)",
-    "Mercedes-Benz E-Class 2010.price": "Айына кредиттин баасы: 41 962сом",
+    "Mercedes-Benz E-Class 2010.price": "Айына кредиттин баасы: 42 187сом",
     "Honda CR-V 2010": "Honda CR-V </br>2010 жылы",
     "Honda CR-V 2010.issued": "Берилген: 150миң сом (Унааны алуусуз менен)",
-    "Honda CR-V 2010.price": "Айына кредиттин баасы: 13 987сом",
+    "Honda CR-V 2010.price": "Айына кредиттин баасы: 14 062сом",
     "modal-title": "Унааны алуусуз насыя алуу"
 }
