--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -37,7 +37,7 @@
     "Loan without repossessing a car - everything is quick and simple": "Унааны алуусуз насыя - баары тез жана оңой",
     "sub-text-1": "Бишкек автоломбард унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
     "Features of loans for cars without withdrawal": "Автокредиттерди алуунун өзгөчөлүктөрү",
-    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн эки түп нуска документ керек болот:<br>Идентификациялык карта (ID)<br>Унаанын каттоо күбөлүгү<br>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 450 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>450 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
+    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн эки түп нуска документ керек болот:<ul><li>Идентификациялык карта (ID)</li><li>Унаанын каттоо күбөлүгү</li><li>Жубайынын нотариалдык жактан күбөлөндүрүлгөн макулдугу (<b>Эгерде бар болсо</b>)</li></ul>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 500 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>500 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
     "Advantages of loans secured by a Vehicle Certificate": "ТК каттоо жөнүндө күбөлүктөр менен камсыздалган кредиттердин артыкчылыктары",
     "sub-text-3": "Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.<br>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.<br>Таза жана түшүнүктүү келишим шарттары.",
     "Examples of issued loans": "Берилген кредиттердин мисалдары",
@@ -47,7 +47,7 @@
     "Money for a car in Bishkek": "Бишкекте автомашинаны күрөөгө коюп насыя алуу",
     "Get money": "Акча алуу",
     "Loan terms:": "Карыз алуучуларга талаптар:",
-    "sub-text-4": "Кредит боюнча максималдуу пайыздык чен жылдык 150%, анын ичинде кредиттик пайыздар.<br>Кредит боюнча минималдуу пайыздык чен да кредиттин пайызын кошкондо жылдык 72% түзөт.<br>Комиссиялар жок, анын ичинде кредитти берүү жана тейлөө жана башка чыгымдар.<br>Насыяны төлөөнүн минималдуу мөөнөтү 30 күн, насыяны төлөөнүн максималдуу мөөнөтү 365 күн (1 жыл).<br>Насыянын мөөнөтү 30 күндөн 12 айга чейин.<br>Төлөбөй коюунун кесепеттери: төлөө мөөнөтү аяктагандан кийин 60 күн өткөндөн кийин күрөөгө коюлган мүлк аукциондо сатылат, кредиттин суммасынан жана чегерилген пайыздан ашкан сумма (жылына 142,8% ставка боюнча) Зайымчыга кайтарылып берилет.",
+    "sub-text-4": "Кредит боюнча максималдуу пайыздык чен жылдык 150%, анын ичинде кредиттик пайыздар.<br>Кредит боюнча минималдуу пайыздык чен да кредиттин пайызын кошкондо жылдык 72% түзөт.<br>Комиссиялар жок, анын ичинде кредитти берүү жана тейлөө жана башка чыгымдар.<br>Насыяны төлөөнүн минималдуу мөөнөтү 30 күн, насыяны төлөөнүн максималдуу мөөнөтү 365 күн (1 жыл).<br>Насыянын мөөнөтү 30 күндөн 12 айга чейин.<br>Төлөбөй коюунун кесепеттери: төлөө мөөнөтү аяктагандан кийин 60 күн өткөндөн кийин күрөөгө коюлган мүлк аукциондо сатылат, кредиттин суммасынан жана чегерилген пайыздан ашкан сумма (жылына 150% ставка боюнча) Зайымчыга кайтарылып берилет.",
     "An example of calculating a loan in our car pawnshop:": "Күрөө менен камсыздалган насыяны эсептөөнүн мисалы:",
     "sub-text-5": "Биз сизге насыяны эсептөөнүн мисалын сунуштайбыз.<br>1 жылга 100 миң сом керек болчу. 12 айдан кийин 250 000 сомду (анын ичинен 100 миң сому негизги сумма, 150 миң сому пайыз) кайтарып беришиңиз керек болот. Эч кандай комиссиялар жок. Насыяны төлөө берилген күндөн тартып 90 күндөн кийин мүмкүн.<br>Насыянын мөөнөтү 30 күндөн 365 күнгө чейин.<br>Насыянын мөөнөтүн узартуу өткөн мезгилге автоунаа күрөөсү менен «Карызга Акча» кызматын пайдалангандыгы үчүн % толук төлөм менен ишке ашырылат.",
     "Contacts": "Байланыштар",
@@ -65,20 +65,21 @@
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
     "License number": "Номер Лицензии",
     "Close": "Жабуу",
-    "Toyota Camry 70 2019": "Toyota Camry 70 </br>2019 жылы",
+    "Toyota Camry 70 2019": "Toyota Camry 70",
     "Toyota Camry 70 2019.issued": "Берилген: 300миң сом (Унааны алуусуз менен)",
     "Toyota Camry 70 2019.price": "Айына кредиттин баасы: 28 125сом",
-    "Lexus GX 470 2005": "Lexus GX 470 </br>2005 жылы",
+    "Lexus GX 470 2005": "Lexus GX 470",
     "Lexus GX 470 2005.issued": "Берилген: 500миң сом (Унааны алуу менен)",
     "Lexus GX 470 2005.price": "Айына кредиттин баасы: 44 166сом",
-    "Hyundai Sonata 2015": "Hyundai Sonata </br>2015 жылы",
+    "Hyundai Sonata 2015": "Hyundai Sonata",
     "Hyundai Sonata 2015.issued": "Берилген: 210миң сом (Унааны алуу менен)",
     "Hyundai Sonata 2015.price": "Айына кредиттин баасы: 18 550сом",
-    "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class </br>2010 жылы",
+    "Mercedes-Benz E-Class 2010": "Mercedes-Benz E-Class",
     "Mercedes-Benz E-Class 2010.issued": "Берилген: 450миң сом (Унааны алуусуз менен)",
     "Mercedes-Benz E-Class 2010.price": "Айына кредиттин баасы: 42 187сом",
-    "Honda CR-V 2010": "Honda CR-V </br>2010 жылы",
+    "Honda CR-V 2010": "Honda CR-V",
     "Honda CR-V 2010.issued": "Берилген: 150миң сом (Унааны алуусуз менен)",
     "Honda CR-V 2010.price": "Айына кредиттин баасы: 14 062сом",
+    "yearly": "жылы",
     "modal-title": "Унааны алуусуз насыя алуу"
 }
