--- a/simple_i18n/translations/ru.json
+++ b/simple_i18n/translations/ru.json
@@ -7,7 +7,7 @@
     "Contacts": "Контакты",
     "Call me back": "Перезвоните мне",
     "Loans without repossession of a Car in Bishkek": "Займы без изъятия Автомобиля в Бишкеке",
-    "Promotional loan without car repossession <b>at 12.5%</b> of 50 thousand soms for a period of 30 days": "Акция кредит без изъятия авто <b>под 12,5%</b> от 50 тыс. сомов на срок от 30 суток",
+    "Promotional loan without car repossession at 12.5% of 50 thousand soms for a period of 30 days": "Акция кредит без изъятия авто <b>под <b id='withoutDrawal'></b></b> от 50 тыс. сомов на срок от 30 суток",
     "Get money": "Получить деньги",
     "Submit your application": "Оставьте заявку",
     "Auto pawnshop calculator": "Калькулятор автоломбарда",
@@ -35,11 +35,11 @@
     "Third": "Третье",
     "Finance. You receive cash on the day of application in a few minutes.": "Финансы. Вы получаете наличными в день обращения за несколько минут.",
     "Loan without repossessing a car - everything is quick and simple": "Займ без изъятия авто - все быстро и просто",
-    "sub-text-1": "Автоломбард Бишкек предлагает получить деньги под залог Свидетельства о регистрации транспортного средства. <br/>Без изъятия автомобиля и заключения договора купли-продажи. <br/>Вы получите деньги наличными в течение 40 минут после обращения и пользуетесь своим автомобилем до закрытия суммы займа, без ограничения. <br/>Отправив нам заявку, с вами свяжется менеджер для уточнения суммы займа, срока предоставления и марки автомобиля, для предварительной оценки. <br/>Вы можете подъехать в офис автоломбарда и ознакомиться с договором, в любое удобное время и получить деньги. <br/>Все быстро и просто.",
+    "sub-text-1": "<b>Автоломбард “Тулпар”</b> предлагает получить деньги под залог Свидетельства о регистрации транспортного средства. <br/>Без изъятия автомобиля и заключения договора купли-продажи. <br/>Вы получите деньги наличными в течение 40 минут после обращения и пользуетесь своим автомобилем до закрытия суммы займа, без ограничения. <br/>Отправив нам заявку, с вами свяжется менеджер для уточнения суммы займа, срока предоставления и марки автомобиля, для предварительной оценки. <br/>Вы можете подъехать в офис автоломбарда и ознакомиться с договором, в любое удобное время и получить деньги. <br/>Все быстро и просто.",
     "Features of loans for cars without withdrawal": "Особенности займов под авто без изъятия",
-    "sub-text-2": "Для заключения договора займа без изъятия автомобиля вам понадобится два оригинала документа: <ul><li>Паспорт гражданина (ID)</li><li>Свидетельство о регистрации ТС</li><li>Нотариально заверенное согласие супруги(га) (<b>При наличии</b>)</li></ul> Сумма займа зависит от стоимости транспортного средства и как правило составляет 30-40 % от рыночной цены автомобиля, но ограничена 500 тыс. сом.",
+    "sub-text-2": "Для заключения договора займа без изъятия автомобиля c <b>Автоломбардом “Тулпар”</b> вам понадобится два оригинала документа: <ul><li>Паспорт гражданина (ID)</li><li>Свидетельство о регистрации ТС</li><li>Нотариально заверенное согласие супруги(га) (<b>При наличии</b>)</li></ul> Сумма займа зависит от стоимости транспортного средства и как правило составляет 30-40 % от рыночной цены автомобиля, но ограничена 500 тыс. сом.",
     "Advantages of loans secured by a Vehicle Certificate": "Примущества займов под залог Свидетелства ТС",
-    "sub-text-3": "<ul><li>Мы не изымаем и не делаем записи в Свидельство о регистрации автомобиля, не переоформляем собственника, все документы остаются у владельца автомобиля.</li><li>Выдаем займы под залог всех видов транспортных средств, нам не важна марка, год выпуска, также мы не спрашиваем поручителей и справок о доходах.</li><li>Чистые и прозрачные условия договора.</li><ul>",
+    "sub-text-3": "<ul><li>Мы не изымаем и не делаем записи в Свидельство о регистрации автомобиля, не переоформляем собственника, все документы остаются у владельца автомобиля.</li><li>Выдаем займы под залог всех видов транспортных средств, нам не важна марка, год выпуска, также мы не спрашиваем поручителей и справок о доходах.</li><li>Чистые и прозрачные условия договора c <b>Автоломбардом “Тулпар”</b>.</li><ul>",
     "Examples of issued loans": "Примеры выданных займов",
     "Money for a car in Bishkek": "Деньги под автомобиль в Бишкеке",
     "Get money": "Получить деньги",
@@ -49,7 +49,7 @@
     "sub-text-5": "Предлагаем Вам пример расчета займа. <br/>Вам потребовалось 100 тысяч сом на 1 год. По истечении 12 месяцев вам необходимо будет вернуть 250 000 сом (из них 100 тыс сом - основная сумма, 150 тыс. сом. –проценты). Каких-либо комиссий – нет. Погашение займа возможно по истечении 30 дней со дня выдачи. <br/>Период займа — от 30 дней до 365 дней. <br/>Продление займа осуществляется при полном погашении % за пользование услугой «Карызга акча» под залог автомобиля за предыдущий период.",
     "Contacts": "Контакты",
     "Address": "Адрес",
-    "Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)": "г.Бишкек, Московская 262 пер. Асаналиева (Некрасова)",
+    "Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)": "г.Бишкек. ул.Московская 262. пересекает Асаналиева (бывшая ул.Кулиева)",
     "Phone": "Телефон",
     "Operating mode": "Режим работы",
     "Sun: Closed": "Вс: Выходной",
@@ -57,7 +57,7 @@
     "date-1": "Пн-Пт: 10:00 - 19:00",
     "AUTO PAWNSHOP 'TULPAR'": "АВТО ЛОМБАРД “ТУЛПАР”",
     "Services provided by:": "Услуги оказывает:",
-    "OSDO 'Avtolombard Tulpar'": "ОсДО “Автоломбард Тулпар”",
+    "OSDO 'Avtolombard Tulpar'": "ОсДО “Ломбард Тулпар Авто”",
     "TIN: 02205202310576": "ИНН: 02205202310576",
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
     "License number": "Номер Лицензии",
