--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -7,7 +7,7 @@
     "Contacts": "Байланыштар",
     "Call me back": "Кайра чалуу",
     "Loans without repossession of a Car in Bishkek": "Бишкек шаарында Унааны алуусуз кредиттер",
-    "Promotional loan without car repossession <b>at 12.5%</b> of 50 thousand soms for a period of 30 days": "<b>12.5%</b> менен унааны алуусуз насыялоо 50 миң сом кредит",
+    "Promotional loan without car repossession at 12.5% of 50 thousand soms for a period of 30 days": "<b><b id='withoutDrawal'></b></b> менен унааны алуусуз насыялоо 50 миң сом кредит",
     "Get money": "Акча алуу",
     "Submit your application": "Өтүнмөңүздү жөнөтүңүз",
     "Auto pawnshop calculator": "Төлөм калькулятору",
@@ -35,11 +35,11 @@
     "Third": "Үчүнчү",
     "Finance. You receive cash on the day of application in a few minutes.": "Каржы. Сиз кайрылуу күнү накталай акчаны бир нече мүнөттөн кийин аласыз.",
     "Loan without repossessing a car - everything is quick and simple": "Унааны алуусуз насыя - баары тез жана оңой",
-    "sub-text-1": "Бишкек автоломбард унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
+    "sub-text-1": "<b>Автокурөөкана “Тулпар”</b> унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
     "Features of loans for cars without withdrawal": "Автокредиттерди алуунун өзгөчөлүктөрү",
-    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн эки түп нуска документ керек болот:<ul><li>Идентификациялык карта (ID)</li><li>Унаанын каттоо күбөлүгү</li><li>Жубайынын нотариалдык жактан күбөлөндүрүлгөн макулдугу (<b>Эгерде бар болсо</b>)</li></ul>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 500 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>500 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
+    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн <b>“Тулпар” Автокурөөканага</b> эки түп нуска документ керек болот:<ul><li>Идентификациялык карта (ID)</li><li>Унаанын каттоо күбөлүгү</li><li>Жубайынын нотариалдык жактан күбөлөндүрүлгөн макулдугу (<b>Эгерде бар болсо</b>)</li></ul>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 500 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>500 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
     "Advantages of loans secured by a Vehicle Certificate": "ТК каттоо жөнүндө күбөлүктөр менен камсыздалган кредиттердин артыкчылыктары",
-    "sub-text-3": "Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.<br>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.<br>Таза жана түшүнүктүү келишим шарттары.",
+    "sub-text-3": "<ul><li>Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.</li><li>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.</li><li>Таза жана түшүнүктүү келишим шарттары <b>Автокурөөкана “Тулпар”</b> менен.</li></ul>",
     "Examples of issued loans": "Берилген кредиттердин мисалдары",
     "Toyota Camry 2000": "Toyota Camry 70",
     "Given: 500 thousand soms without withdrawal": "Берилген: 500миң сом унааны алуусуз",
@@ -52,7 +52,7 @@
     "sub-text-5": "Биз сизге насыяны эсептөөнүн мисалын сунуштайбыз.<br>1 жылга 100 миң сом керек болчу. 12 айдан кийин 250 000 сомду (анын ичинен 100 миң сому негизги сумма, 150 миң сому пайыз) кайтарып беришиңиз керек болот. Эч кандай комиссиялар жок. Насыяны төлөө берилген күндөн тартып 90 күндөн кийин мүмкүн.<br>Насыянын мөөнөтү 30 күндөн 365 күнгө чейин.<br>Насыянын мөөнөтүн узартуу өткөн мезгилге автоунаа күрөөсү менен «Карызга Акча» кызматын пайдалангандыгы үчүн % толук төлөм менен ишке ашырылат.",
     "Contacts": "Байланыштар",
     "Address": "Дарегибиз",
-    "Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)": "Бишкек шаары, Московская 262көч. Асаналиева кесилиши (Некрасова)",
+    "Bishkek, Moskovskaya 262 lane Asanalieva (Nekrasova)": "Бишкек шаары, Московская 262 көч. Асаналиева кесилиши (мурунку Кулиева көч)",
     "Phone": "Телефон",
     "Operating mode": "Иштөө убактысы",
     "Sun: Closed": "Вс: Дем алыш",
@@ -60,7 +60,7 @@
     "date-1": "Пн-Пт: 10:00 - 19:00",
     "AUTO PAWNSHOP 'TULPAR'": "АВТО ЛОМБАРД “ТУЛПАР”",
     "Services provided by:": "Услуги оказывает:",
-    "OSDO 'Avtolombard Tulpar'": "ОсДО “Автоломбард Тулпар”",
+    "OSDO 'Avtolombard Tulpar'": "ОсДО “Ломбард Тулпар Авто”",
     "TIN: 02205202310576": "ИНН: 02205202310576",
     "0060 dated August 30, 2023": "0060 от 30 августа 2023г",
     "License number": "Номер Лицензии",
