--- a/simple_i18n/translations/kg.json
+++ b/simple_i18n/translations/kg.json
@@ -1,5 +1,5 @@
 {
-    "Company name": "АВТО КҮРӨӨКАНА“ТУЛПАР”",
+    "Company name": "“Авто Күрөөкана Тулпар”",
     "Calculator": "Калькулятор",
     "About company": "Биз жөнүндө",
     "Examples": "Мисалдар",
@@ -22,7 +22,7 @@
     "I agree to the processing of personal data": "Мен жеке маалыматтарды иштетүүгө макулмун.",
     "Submit your application now and get paid today!": "Өтүнмөңүздү жөнөтүп,бүгүн акча алыңыз!",
     "Call me back": "Мага кайра чалыңыз",
-    "Tulpar pawnshop": "Автокүрөөкана “Тулпар”",
+    "Tulpar pawnshop": "“Авто Күрөөкана Тулпар”",
     "Loan from 50 thousand": "50 миң сомдон өйдө кредит",
     "How can I get money in 40 minutes today?": "Бүгүн 40 мүнөттө кантип акча алууга болот?",
     "What are the main terms of the contract?": "Келишимдин негизги шарттары кандай?",
@@ -35,11 +35,11 @@
     "Third": "Үчүнчү",
     "Finance. You receive cash on the day of application in a few minutes.": "Каржы. Сиз кайрылуу күнү накталай акчаны бир нече мүнөттөн кийин аласыз.",
     "Loan without repossessing a car - everything is quick and simple": "Унааны алуусуз насыя - баары тез жана оңой",
-    "sub-text-1": "<b>Автокурөөкана “Тулпар”</b> унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
+    "sub-text-1": "<b>“Авто Күрөөкана Тулпар”</b> унааны каттоо күбөлүгүнүн күрөөсүнө акча алууну сунуштайт.<br>Машинаны алып коюусуз жана сатып алуу - сатуу келишимин түзбөстөн.<br>Сиз арыз бергенден кийин 40 мүнөттүн ичинде накталай акча ала аласыз жана унааңызды кредиттин суммасы жабылганга чейин чектөөсүз колдоносуз.<br>Бизге арыз жөнөткөндөн кийин менеджер алдын ала баа берүү үчүн насыянын суммасын, насыянын мөөнөтүн жана автоунаанын маркасын тактоо үчүн сиз менен байланышат.<br>Каалаган ыңгайлуу убакта автоломбарддын кеңсесине келип, келишим менен таанышып, акча ала аласыз.<br>Баары тез жана жөнөкөй.",
     "Features of loans for cars without withdrawal": "Автокредиттерди алуунун өзгөчөлүктөрү",
-    "sub-text-2": "Унааны албай туруп кредиттик келишим түзүү үчүн <b>“Тулпар” Автокурөөканага</b> эки түп нуска документ керек болот:<ul><li>Идентификациялык карта (ID)</li><li>Унаанын каттоо күбөлүгү</li><li>Жубайынын нотариалдык жактан күбөлөндүрүлгөн макулдугу (<b>Эгерде бар болсо</b>)</li></ul>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 500 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>500 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
+    "sub-text-2": "Унааны албай туруп <b>“Авто Күрөөкана Тулпар”</b> менен кредиттик келишим түзүү үчүн эки түп нуска документ керек болот:<ul><li>Идентификациялык карта (ID)</li><li>Унаанын каттоо күбөлүгү</li><li>Жубайынын нотариалдык жактан күбөлөндүрүлгөн макулдугу (<b>Эгерде бар болсо</b>)</li></ul>Насыянын суммасы унаанын наркына жараша болот жана негизинен унаанын базар баасынын 30-40% түзөт, бирок 500 000 сом менен чектелет.<br>Төлөө графиги, насыянын мөөнөтү айына бир жолу пайыздарды төлөөнү эске алуу менен бир жылга чейин узартуу мүмкүнчүлүгү менен 1 ай.<br>500 миң сомго чейин кредитти төлөө жана көбөйтүү каалаган убакта мүмкүн.",
     "Advantages of loans secured by a Vehicle Certificate": "ТК каттоо жөнүндө күбөлүктөр менен камсыздалган кредиттердин артыкчылыктары",
-    "sub-text-3": "<ul><li>Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.</li><li>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.</li><li>Таза жана түшүнүктүү келишим шарттары <b>Автокурөөкана “Тулпар”</b> менен.</li></ul>",
+    "sub-text-3": "<ul><li>Биз автомашинанын каттоо күбөлүгүн алып салбайбыз жана жазууларды киргизбейбиз, ээсин кайра каттабайбыз, бардык документтер унаанын ээсинде калат.</li><li>Биз кредиттерди транспорттун бардык түрү менен күрөөгө беребиз, маркасы, чыгарылган жылы биз үчүн маанилүү эмес, биз гаранттарды жана кирешелер жөнүндө отчетту сурабайбыз.</li><li>Таза жана түшүнүктүү келишим шарттары <b>“Авто Күрөөкана Тулпар”</b> менен.</li></ul>",
     "Examples of issued loans": "Берилген кредиттердин мисалдары",
     "Toyota Camry 2000": "Toyota Camry 70",
     "Given: 500 thousand soms without withdrawal": "Берилген: 500миң сом унааны алуусуз",
@@ -58,7 +58,7 @@
     "Sun: Closed": "Вс: Дем алыш",
     "Sat: 10:00 - 15:00": "Сб: 10:00 - 15:00",
     "date-1": "Пн-Пт: 10:00 - 19:00",
-    "AUTO PAWNSHOP 'TULPAR'": "АВТО ЛОМБАРД “ТУЛПАР”",
+    "AUTO PAWNSHOP 'TULPAR'": "“Авто Күрөөкана Тулпар”",
     "Services provided by:": "Услуги оказывает:",
     "OSDO 'Avtolombard Tulpar'": "ОсДО “Ломбард Тулпар Авто”",
     "TIN: 02205202310576": "ИНН: 02205202310576",
