--- a/simple_i18n/translations/ru.json
+++ b/simple_i18n/translations/ru.json
@@ -1,5 +1,5 @@
 {
-    "Company name": "АВТО ЛОМБАРД “ТУЛПАР”",
+    "Company name": "“Ломбард Тулпар Авто”",
     "Calculator": "Калькулятор",
     "About company": "О компании",
     "Examples": "Примеры",
@@ -22,7 +22,7 @@
     "I agree to the processing of personal data": "Соглашаюсь на обработку персональных данных",
     "Submit your application now and get paid today!": "Оставьте заявку сейчас и получите деньги уже сегодня!",
     "Call me back": "Перезвоните мне",
-    "Tulpar pawnshop": "Автоломбард “Тулпар”",
+    "Tulpar pawnshop": "“Ломбард Тулпар Авто”",
     "Loan from 50 thousand": "Займ от 50тыс",
     "How can I get money in 40 minutes today?": "Как сегодня получить деньги за 40 минут?",
     "What are the main terms of the contract?": "Какие основные условия договора?",
@@ -35,11 +35,11 @@
     "Third": "Третье",
     "Finance. You receive cash on the day of application in a few minutes.": "Финансы. Вы получаете наличными в день обращения за несколько минут.",
     "Loan without repossessing a car - everything is quick and simple": "Займ без изъятия авто - все быстро и просто",
-    "sub-text-1": "<b>Автоломбард “Тулпар”</b> предлагает получить деньги под залог Свидетельства о регистрации транспортного средства. <br/>Без изъятия автомобиля и заключения договора купли-продажи. <br/>Вы получите деньги наличными в течение 40 минут после обращения и пользуетесь своим автомобилем до закрытия суммы займа, без ограничения. <br/>Отправив нам заявку, с вами свяжется менеджер для уточнения суммы займа, срока предоставления и марки автомобиля, для предварительной оценки. <br/>Вы можете подъехать в офис автоломбарда и ознакомиться с договором, в любое удобное время и получить деньги. <br/>Все быстро и просто.",
+    "sub-text-1": "<b>“Ломбард Тулпар Авто”</b> предлагает получить деньги под залог Свидетельства о регистрации транспортного средства. <br/>Без изъятия автомобиля и заключения договора купли-продажи. <br/>Вы получите деньги наличными в течение 40 минут после обращения и пользуетесь своим автомобилем до закрытия суммы займа, без ограничения. <br/>Отправив нам заявку, с вами свяжется менеджер для уточнения суммы займа, срока предоставления и марки автомобиля, для предварительной оценки. <br/>Вы можете подъехать в офис автоломбарда и ознакомиться с договором, в любое удобное время и получить деньги. <br/>Все быстро и просто.",
     "Features of loans for cars without withdrawal": "Особенности займов под авто без изъятия",
-    "sub-text-2": "Для заключения договора займа без изъятия автомобиля c <b>Автоломбардом “Тулпар”</b> вам понадобится два оригинала документа: <ul><li>Паспорт гражданина (ID)</li><li>Свидетельство о регистрации ТС</li><li>Нотариально заверенное согласие супруги(га) (<b>При наличии</b>)</li></ul> Сумма займа зависит от стоимости транспортного средства и как правило составляет 30-40 % от рыночной цены автомобиля, но ограничена 500 тыс. сом.",
+    "sub-text-2": "Для заключения договора займа без изъятия автомобиля c <b>“Ломбард Тулпар Авто”</b> вам понадобится два оригинала документа: <ul><li>Паспорт гражданина (ID)</li><li>Свидетельство о регистрации ТС</li><li>Нотариально заверенное согласие супруги(га) (<b>При наличии</b>)</li></ul> Сумма займа зависит от стоимости транспортного средства и как правило составляет 30-40 % от рыночной цены автомобиля, но ограничена 500 тыс. сом.",
     "Advantages of loans secured by a Vehicle Certificate": "Примущества займов под залог Свидетелства ТС",
-    "sub-text-3": "<ul><li>Мы не изымаем и не делаем записи в Свидельство о регистрации автомобиля, не переоформляем собственника, все документы остаются у владельца автомобиля.</li><li>Выдаем займы под залог всех видов транспортных средств, нам не важна марка, год выпуска, также мы не спрашиваем поручителей и справок о доходах.</li><li>Чистые и прозрачные условия договора c <b>Автоломбардом “Тулпар”</b>.</li><ul>",
+    "sub-text-3": "<ul><li>Мы не изымаем и не делаем записи в Свидельство о регистрации автомобиля, не переоформляем собственника, все документы остаются у владельца автомобиля.</li><li>Выдаем займы под залог всех видов транспортных средств, нам не важна марка, год выпуска, также мы не спрашиваем поручителей и справок о доходах.</li><li>Чистые и прозрачные условия договора c <b>“Ломбард Тулпар Авто”</b>.</li><ul>",
     "Examples of issued loans": "Примеры выданных займов",
     "Money for a car in Bishkek": "Деньги под автомобиль в Бишкеке",
     "Get money": "Получить деньги",
@@ -55,7 +55,7 @@
     "Sun: Closed": "Вс: Выходной",
     "Sat: 10:00 - 15:00": "Сб: 10:00 - 15:00",
     "date-1": "Пн-Пт: 10:00 - 19:00",
-    "AUTO PAWNSHOP 'TULPAR'": "АВТО ЛОМБАРД “ТУЛПАР”",
+    "AUTO PAWNSHOP 'TULPAR'": "“Ломбард Тулпар Авто”",
     "Services provided by:": "Услуги оказывает:",
     "OSDO 'Avtolombard Tulpar'": "ОсДО “Ломбард Тулпар Авто”",
     "TIN: 02205202310576": "ИНН: 02205202310576",
